--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -70,15 +70,16 @@
         </div>
       </section>
     </div>
+  
   </div>
-
 
 
 
 
 <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://g-teja2001.github.io/My_Portfolio/">GOLLA TEJA</a>.
 </div>
+
 </body>
 </html>
